cafe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe
spec:
  rules:
    - host: cafe.example.com
      http:
        paths:       
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webapp-svc
              port:
                number: 80
        paths:
        - path: /coffee
          pathType: Prefix
          backend:
            service:
              name: coffee-svc
              port:
                number: 80
        - path: /tea
          pathType: Prefix
          backend:
            service:
              name: tea-svc
              port:
                number: 80
